# package-api-kit

./: BUILD.md  README.md  pyproject.toml
cloud_dog_api_kit/: __init__.py  config.py  factory.py  traceability_ids.py
cloud_dog_api_kit/a2a/: __init__.py  card.py  gateway.py  skill_audit.py
cloud_dog_api_kit/auth/: __init__.py  dependency.py  rbac.py  service_auth.py
cloud_dog_api_kit/clients/: __init__.py  circuit_breaker.py  http_client.py  retry.py
cloud_dog_api_kit/compat/: __init__.py  envelope.py  profile.py  routes.py
cloud_dog_api_kit/correlation/: __init__.py  context.py  middleware.py
cloud_dog_api_kit/envelopes/: __init__.py  error.py  success.py
cloud_dog_api_kit/errors/: __init__.py  exceptions.py  handler.py  taxonomy.py
cloud_dog_api_kit/idempotency/: __init__.py  middleware.py  store.py
cloud_dog_api_kit/lifecycle/: __init__.py  hooks.py  shutdown.py
cloud_dog_api_kit/mcp/: __init__.py  async_jobs.py  contract.py  error_mapper.py  gateway.py  legacy_sse.py  session.py  tool_audit.py  tool_router.py  transport.py
cloud_dog_api_kit/middleware/: __init__.py  cors.py  logging.py  request_size_limit.py  timeout.py  timing.py
cloud_dog_api_kit/openapi/: __init__.py  customise.py  route.py
cloud_dog_api_kit/routers/: __init__.py  crud.py  health.py  jobs.py  version.py
cloud_dog_api_kit/schemas/: __init__.py  envelopes.py  filters.py  pagination.py
cloud_dog_api_kit/streaming/: __init__.py  events.py  jsonl.py  sse.py
cloud_dog_api_kit/testing/: __init__.py  conformance.py  fixtures.py
cloud_dog_api_kit/versioning/: __init__.py  (+1 more)
(+69 files in other folders)
