[project]
license = { text = "Apache-2.0" }
authors = [
  { name = "Cloud-Dog, Viewdeck Engineering Limited" }
]
name = "cloud-dog-api-kit"
version = "0.2.0"
description = "PS-20 API toolkit for Cloud-Dog services"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "starlette>=0.36",
    "pydantic>=2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
logging = ["cloud-dog-logging>=0.2.0"]
config = ["cloud-dog-config>=0.2.0"]
idam = ["cloud-dog-idam>=0.1.0"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "pytest-asyncio>=0.23", "ruff>=0.4", "uvicorn>=0.29"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py310"

[project.urls]
"Source" = "https://github.com/cloud-dog-ai/platform-api-kit"
